welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:22: error: type mismatch;
 found   : Int(1)
 required: String
				setCouleurBrosse (T(c3)+1)
                                                        ^